--- a/Shoppers_Hub/app/templates/app/checkout.html
+++ b/Shoppers_Hub/app/templates/app/checkout.html
@@ -3,11 +3,11 @@
 {% block title %}Checkout{% endblock title %}
 {% block main-content %}
 <div class="container">
- <div class="row mt-5">
-  <div class="col-sm-6">
-    <h4>Order Summary</h4>
-    <hr>
-    {% for item in cart_items %}
+  <div class="row mt-5">
+    <div class="col-sm-6">
+      <h4>Order Summary</h4>
+      <hr>
+      {% for item in cart_items %}
       <div class="card mb-2">
         <div class="card-body">
           <h5>Product: {{item.product.title}}</h5>
@@ -15,32 +15,71 @@
           <p class="fw-bold">Price: {{item.total_cost}}</p>
         </div>
       </div>
-    {% endfor %}
-    <p class="fw-bold">Total Cost + Shipping Charges = {{totalcost}}</p>
-    <small>Term and Condition: Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, ullam saepe! Iure optio repellat dolor velit, minus rem. Facilis cumque neque numquam laboriosam, accusantium adipisci nisi nihil in et quis?</small>
-  </div>
-  <div class="col-sm-4 offset-sm-1">
-    <h4>Select Shipping Address</h4>
-    <hr>
-    <form action="/paymentdone">
-      {% for ad in add %}
-      <div class="card">
-        <div class="card-body">
-        <h5>{{ad.name}}</h5>
-        <p>{{ad.locality}}, {{ad.city}}, {{ad.state}} - {{ad.zipcode}}</p>
+      {% endfor %}
+      <p class="fw-bold">Total Cost + Shipping Charges = {{totalcost}}</p>
+      <small>Term and Condition: Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, ullam saepe! Iure
+        optio repellat dolor velit, minus rem. Facilis cumque neque numquam laboriosam, accusantium adipisci nisi nihil
+        in et quis?</small>
+    </div>
+    <div class="col-sm-4 offset-sm-1">
+      <h4>Select Shipping Address</h4>
+      <hr>
+      <form action="/paymentdone" id="myform">
+        {% for ad in add %}
+        <div class="card">
+          <div class="card-body">
+            <h5>{{ad.name}}</h5>
+            <p>{{ad.locality}}, {{ad.city}}, {{ad.state}} - {{ad.zipcode}}</p>
+          </div>
         </div>
-      </div>
         <div class="form-check mt-2 mb-5">
-          <input class="form-check-input" type="radio" name="custid" id="custadd{{forloop.counter}}"   value="{{ad.id}}">
+          <input class="form-check-input" type="radio" name="custid" id="custadd{{forloop.counter}}" value="{{ad.id}}">
           <label class="form-check-label fw-bold" for="custadd{{forloop.counter}}">
             Address: {{forloop.counter}} </label>
         </div>
-      {% endfor %}
+        {% endfor %}
         <div class="text-end">
-          <button type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Continue</button>
+          <!-- <button type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Continue</button> -->
+          <!-- Set up a container element for the button -->
+          <div id="paypal-button-container"></div>
         </div>
       </form>
     </div>
   </div>
 </div>
 {% endblock main-content %}
+
+{% block payment-gateway %}
+<!-- Include the PayPal JavaScript SDK -->
+<script
+  src="https://www.paypal.com/sdk/js?client-id=AUkn9ny2ehrfq-lv_AX_1xd3F5N4JALSy3gCAPafl6sF2TQJKfTGEJPpVfeWsTPLgy9AOu3fz7-xzdF7&currency=USD"></script>
+
+<script>
+  // Render the PayPal button into #paypal-button-container
+  paypal.Buttons({
+
+    // Set up the transaction
+    createOrder: function (data, actions) {
+      return actions.order.create({
+        purchase_units: [{
+          amount: {
+            value: '{{totalcost}}'
+          }
+        }]
+      });
+    },
+
+    // Finalize the transaction
+    onApprove: function (data, actions) {
+      return actions.order.capture().then(function (details) {
+        // Show a success message to the buyer
+        alert('Transaction completed by ' + details.payer.name.given_name + '!');
+        document.getElementById("myform").submit()
+      });
+    }
+
+
+  }).render('#paypal-button-container');
+</script>
+
+{% endblock payment-gateway %}
