--- a/Shoppers_Hub/app/templates/app/home.html
+++ b/Shoppers_Hub/app/templates/app/home.html
@@ -6,18 +6,22 @@
 <!--Banner Slider-->
  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
+    <div class="carousel-item">
+      <img src="{% static 'app/images/banner/b11.jpg' %}" class="d-block w-100" alt="..."> 
+    </div>
     <div class="carousel-item active">
-      <img src="{% static 'app/images/banner/b1.jpg' %}" class="d-block w-100" alt="..."> 
+      <img src="{% static 'app/images/banner/b12.jpg' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'app/images/banner/b2.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'app/images/banner/b13.jpg' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'app/images/banner/b3.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'app/images/banner/b14.jpg' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'app/images/banner/b4.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'app/images/banner/b15.jpg' %}" class="d-block w-100" alt="...">
     </div>
+    
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
