--- a/Shoppers_Hub/app/templates/app/mobile.html
+++ b/Shoppers_Hub/app/templates/app/mobile.html
@@ -7,8 +7,8 @@
      <div class="col-sm-3">
       <div class="list-group">
         <a href="{% url 'mobile' %}" class="list-group-item list-group-item-action" aria-current="true">All Mobile</a>
-        <a href="{% url 'mobiledata' 'Realme'  %}" class="list-group-item list-group-item-action" aria-current="true">Realme</a>
-        <a href="{% url 'mobiledata' 'Samsung'  %}" class="list-group-item list-group-item-action">Samsung</a>
+        <a href="{% url 'mobiledata' 'Android'  %}" class="list-group-item list-group-item-action" aria-current="true">Android</a>
+        <a href="{% url 'mobiledata' 'iPhone'  %}" class="list-group-item list-group-item-action">iPhone</a>
         <a href="{% url 'mobiledata' 'below'  %}" class="list-group-item list-group-item-action">Below 10000</a>
         <a href="{% url 'mobiledata' 'above'  %}" class="list-group-item list-group-item-action">Above 10000</a>
       </div>
