--- a/Shoppers_Hub/app/templates/app/base.html
+++ b/Shoppers_Hub/app/templates/app/base.html
@@ -21,8 +21,8 @@
 
     <title>Shopper's Hub | {% block title %} {% endblock title %} </title>
   </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #56b4f8;">
      <div class="container">
        <a class="navbar-brand" href="/">Shopper's Hub</a>
        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,7 +47,7 @@
                Fashion
              </a>
              <ul class="dropdown-menu" aria-labelledby="fashionDropdown">
-               <li><a class="dropdown-item" href="#">Top Wear</a></li>
+               <li><a class="dropdown-item" href="{% url 'topwears' %}">Top Wear</a></li>
                <li><a class="dropdown-item" href="#">Bottom Wear</a></li>
              </ul>
            </li>
@@ -90,16 +90,19 @@
        </div>
      </div>
     </nav>
+    <main class="flex-grow-1">
     {% block banner_slider %} {% endblock banner_slider %}
     {% block livesale %} {% endblock livesale %}
     {% block main-content %} {% endblock main-content %}
     {% block payment-gateway %}{% endblock payment-gateway %}
+    </main>
 
     <!-- Start Footer -->
-    <footer class="container-fluid bg-dark text-center p-2 mt-5">
+    <footer class="container-fluid bg-dark text-center p-2 mt-5 sticky-bottom">
         <small class="text-white">Copyright &copy; 2024 || Designed By Anurag Sharma || </small>
         <img src="{% static 'app/images/payment.png' %}" alt="" srcset="" class="img-fluid" height="2px">
-    </footer> <!-- End Footer -->
+    </footer> 
+    <!-- End Footer -->
 
     <!-- Jquery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
