fixed order status

--- a/Shoppers_Hub/app/templates/app/home.html
+++ b/Shoppers_Hub/app/templates/app/home.html
@@ -49,7 +49,7 @@
 
 {% block main-content %}
 <!-- 1st Product Slider -->
-<div class="m-3">
+<div class="m-3 text-center">
  <h2>Shopper's Hub Deals of The Day</h2>
  <!-- Slider 1 -->
  <div class="owl-carousel" id="slider1">
@@ -96,7 +96,7 @@
 <!-- End Payment Info Section -->
 
 <!-- 2nd Product Slider -->
-<div class="mx-3">
+<div class="mx-3 text-center">
  <h2>Recommended Topwears</h2>
  <!-- Slider 2 -->
  <div class="owl-carousel" id="slider2">
@@ -108,7 +108,7 @@
 <!-- End 2nd Product Slider -->
 
 <!-- 3rd Product Slider -->
-<div class="mx-3">
+<div class="mx-3 text-center">
   <h2>Treding Deals on Mobiles</h2>
   <!-- Slider 3 -->
   <div class="owl-carousel" id="slider3">
