--- a/Shoppers_Hub/app/templates/app/orders.html
+++ b/Shoppers_Hub/app/templates/app/orders.html
@@ -11,7 +11,7 @@
             </ul>
         </div> <!--1st Col Closed-->
 
-        <div class="col-sm-9 offset-sm-1">
+        <div class="col-sm-9 offset-sm-1 text-center">
             {% for op in order_placed %}
             <div class="row shadow-sm mb-3">
                 <div class="col-sm-2">
