--- a/Shoppers_Hub/app/templates/app/search.html
+++ b/Shoppers_Hub/app/templates/app/search.html
@@ -11,7 +11,7 @@
             </div>
         {% else %}
             <h4>Search Results for "{{ query }}"</h4>
-            <div class="m-3">
+            <div class="m-3 text-center">
                 {% if products %}
                     {% if products.count == 0 %}
                         <div class="alert alert-warning" role="alert">
