--- a/Shoppers_Hub/app/static/app/css/style.css
+++ b/Shoppers_Hub/app/static/app/css/style.css
@@ -23,3 +23,16 @@
     font-size: 24px;
     font-weight: bold;
 }
+
+@media screen and (max-width: 1300px) {
+    .col-sm-5.offset-sm-1 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn {
+        width: 100%; /* Ensure buttons take full width on smaller screens */
+        margin-top: 10px; /* Adjust top margin for spacing */
+    }
+}
