--- a/Shoppers_Hub/app/templates/app/productdetail.html
+++ b/Shoppers_Hub/app/templates/app/productdetail.html
@@ -11,16 +11,15 @@
         <div class="col-sm-5 offset-sm-1">
             <h2>Product Title: {{product.title}}</h2>
             <hr>
-            <p>Product Description: {{product.description}}</p> <br>
+            <p>Product Description: {{product.description}}</p>
             <h4>Rs. {{product.discounted_price}} <small
-                    class="fw-light text-decoration-line-through">{{product.selling_price}}</small></h4> <br>
+                    class="fw-light text-decoration-line-through">{{product.selling_price}}</small></h4>
 
             {% if user.is_authenticated %}
             {% if item_already_in_cart %}
-            <a href="{% url 'showcart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Go to Cart</a>
+            <a href="{% url 'showcart' %}" class="btn btn-warning shadow px-5 py-2 mt-3">Go to Cart</a>
             {% else %}
-            <!-- <form action="/add-to-cart" class="d-inline"> -->
-            <form action="{% url 'add-to-cart' %}" method="get" class="d-inline">
+            <form action="{% url 'add-to-cart' %}" method="get" class="d-inline mt-3">
                 <input type="hidden" name="prod_id" value="{{product.id}}" id="prod_id">
                 <button type="submit" class="btn btn-primary shadow px-5 py-2">Add to Cart</button>
             </form>
@@ -28,13 +27,14 @@
             {% endif %}
 
             {% if not request.user.is_authenticated %}
-            <form action="/add-to-cart" class="d-inline">
+            <form action="/add-to-cart" class="d-inline mt-4">
                 <input type="hidden" name="prod_id" value="{{product.id}}" id="prod_id">
                 <button type="submit" class="btn btn-primary shadow px-5 py-2">Add to Cart</button>
             </form>
             {% endif %}
 
-            <a href="{% url 'showcart' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
+            <!-- <a href="{% url 'showcart' %}" class="btn btn-danger shadow px-5 py-2 mt-3">Buy Now</a> -->
+            <a href="{% url 'checkout' %}" class="btn btn-danger shadow px-5 py-2 ms-2">Buy Now</a>
             <h5 class="mt-5">Available Offers</h5>
             <ul>
                 <li>Bank Offer 5% Unlimited Cashback on Flipkart Axis Bank Credit</li>
